@@ -217,7 +217,7 @@ check_embedded_art(const char *path, const char *image_data, int image_size)
 	}
 	last_hash = hash;
 
-	imsrc = image_new_from_jpeg(NULL, 0, image_data, image_size, 1);
+	imsrc = image_new_from_jpeg(NULL, 0, image_data, image_size, 1, ROTATE_NONE);
 	if( !imsrc )
 	{
 		last_success = 0;
@@ -301,7 +301,7 @@ check_for_album_file(const char *path)
 		if( art_cache_exists(file, &art_file) )
 			goto existing_file;
 		free(art_file);
-		imsrc = image_new_from_jpeg(file, 1, NULL, 0, 1);
+		imsrc = image_new_from_jpeg(file, 1, NULL, 0, 1, ROTATE_NONE);
 		if( imsrc )
 			goto found_file;
 	}
@@ -314,7 +314,7 @@ check_for_album_file(const char *path)
 		if( art_cache_exists(file, &art_file) )
 			goto existing_file;
 		free(art_file);
-		imsrc = image_new_from_jpeg(file, 1, NULL, 0, 1);
+		imsrc = image_new_from_jpeg(file, 1, NULL, 0, 1, ROTATE_NONE);
 		if( imsrc )
 			goto found_file;
 	}
@@ -331,7 +331,7 @@ existing_file:
 				return art_file;
 			}
 			free(art_file);
-			imsrc = image_new_from_jpeg(file, 1, NULL, 0, 1);
+			imsrc = image_new_from_jpeg(file, 1, NULL, 0, 1, ROTATE_NONE);
 			if( !imsrc )
 				continue;
 found_file:
